added x's and o's to stylesheet classes

--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -2,28 +2,36 @@
   padding: 0px;
   margin: 0px;
 }
+
 #container{
   text-align: center;
   width: 100%;
 }
 .row{
   display: inline-block;
-  width: 75%;
+  width: 60%;
   margin-top: -8px;
 }
+
 .boardPiece{
   text-align: center;
   display: inline-block;
-  height: 150px;
   width: 30%;
+  padding-bottom: 30%;
   border: solid black 1px;
 }
 
 .cross{
-  background-color:yellow;
+  background-image:url('../img/cross.png');
+  background-size: 75% 75%;
+  background-repeat:no-repeat;
+  background-position: center;
 }
 
 .circle{
-  background-color: blue;
+  background-image:url('../img/circle.png');
+  background-size: 100% 100%;
+  background-repeat:no-repeat;
+  background-position: center;
 }
 
