add selector for game mode
I added a selector to the index page for a game mode and added labels to
all of the existing seletors to clarify what each is doing. and cleaned
up some naming. I also updated the css to accomodate an extra selector on top.

--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -8,24 +8,31 @@
   text-align: center;
 }
 
+#mode{
+  margin-top: 10px;
+  float: left;
+  width: 24%;
+  text-align: center;
+}
 #move{
   margin-top: 10px;
   float: left;
-  width: 32%;
-  text-align: right;
+  width: 24%;
+  text-align: center;
 }
 
 #piece{
   margin-top: 10px;
   float: left;
-  width: 32%;
+  width: 24%;
+  text-align: center;
 }
 
 #new{
   margin-top: 10px;
   float: left;
-  width: 32%;
-  text-align: left;
+  width: 24%;
+  text-align: center;
 }
 
 #container{
